--- a/Cbackend/syncclia-backend/.env
+++ b/Cbackend/syncclia-backend/.env
@@ -10,7 +10,7 @@ URL = http://localhost:3000
 # DATABASE
 
 USER = sa
-DATABASE = Syncclia
+DATABASE = SynccliaDB
 PASSWORD = 2691
 SERVER = 127.0.0.1
 sql-PORT= 1433
