--- a/Cbackend/syncclia-backend/package.json
+++ b/Cbackend/syncclia-backend/package.json
@@ -8,7 +8,8 @@
     "node": ">=9.5.1"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "dev" : "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.0",
     "express": "^4.18.2",
     "json": "^11.0.0",
