--- a/Cbackend/syncclia-backend/package.json
+++ b/Cbackend/syncclia-backend/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "nodemon server.js",
-    "dev" : "nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "dotenv": "^16.3.0",
     "express": "^4.18.2",
     "json": "^11.0.0",
+    "jsonwebtoken": "^9.0.0",
     "mssql": "^9.1.1",
     "nodemon": "^2.0.22",
     "token": "^0.1.0",
